--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "web-vitals": "^1.1.0"
   },
   "scripts": {
-    "start": "SET PORT=5500 && react-scripts start",
+    "start": "serve build",
+    "start-dev": "SET PORT=5500 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
