--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "web-vitals": "^1.1.0"
   },
   "scripts": {
-    "start": "npm run build && serve build",
-    "start-dev": "SET PORT=5500 && react-scripts start",
+    "start": "react-scripts build",
+    "start-dev": "SET REACT_APP_AXIOS_BASE_URL=http://localhost:8000 && SET PORT=5500 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
